<resources>
    <!-- Basic App Strings -->
    <string name="app_name">GameTheTown</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Menu Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_create_itenerary">Create Itenerary</string>
    <string name="action_itenerary">Current Itinerary</string>
    <string name="action_select_itenerary">Select Itinerary</string>
    <string name="action_profile">Profile</string>
    <string name="action_log_out">Logout</string>

    <string name="add_point">Add Point</string>
    <string name="add_game">Add Game</string>
    <string name="button1">Set Photo</string>
    <string name="button2">Set Description</string>
    <string name="button3">Set Difficulty Level</string>
    <string name="button4">Submit</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_profile">Profile</string>

    <!-- Teste Dos Arrays, Isto provavelmente vai sair daqui -->
    <string-array name="itenerarios">
        <item>Aventura pelo Monteiro Dos Jeronimos</item>
        <item>Um Pequeno Passeio Pela Fcul</item>
        <item>Um Passeio para a minha filha</item>
    </string-array>

    <!-- Dificuldades De Itenerarios -->
    <string-array name="iten_dif">
        <item>Just Travel</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Break My Bones Hard</item>
    </string-array>

    <string-array name="games">
        <item>Quiz</item>
    </string-array>

    <!-- Prox De Itenerarios -->
    <string-array name="iten_prox">
        <item>All</item>
        <item>Max 1km</item>
        <item>1-5km</item>
        <item>5-10km</item>
        <item>10+km</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_map__current__iten">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_of_created_itineraries">ListOfCreatedItineraries</string>
    <string name="title_activity_search_all_itineraries">SearchAllItineraries</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- LogIn -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_log_in">LOGIN</string>
    <string name="create_account">No account yet? Create one</string>
</resources>
