<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        app:showAsAction="never"/>
    <item android:id="@+id/action_create_itenerary"
        android:title="@string/action_create_itenerary"
        app:showAsAction="never"/>
    <item android:id="@+id/action_itenerary"
        android:title="@string/action_itenerary"
        app:showAsAction="never"/>
    <item android:id="@+id/action_select_itenerary"
        android:title="@string/action_select_itenerary"
        app:showAsAction="never"/>
    <item android:id="@+id/action_log_out"
        android:title="@string/action_log_out"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>