<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login"
    android:background="@drawable/background2"
    tools:context=".Activities.Login">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_top"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="140dp">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_bot"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_email"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="90dp"
        android:onClick="onLoginPress"
        android:text="@string/action_log_in"
        android:textColor="@color/white"
        android:background="@drawable/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_password" />

    <TextView
        android:id="@+id/link_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:onClick="goToRegister"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
